IDP-1516 De-guava-ification: tests and a few Collections2.tramsform
https://issues.shibboleth.net/jira/browse/IDP-1516